--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -23,7 +23,7 @@
 .mainLoadingSpinner{
     position: absolute;
     top: 40%;
-    left: 30%;
+    // left: 30%;
     // box-shadow: 0 5px 10px 0 #e9eff5;
     background:  transparent;
     width: 223px;
@@ -32,6 +32,7 @@
     border-radius: 4px;
     opacity: 0.95;
     padding-left: 5px;
+    width: 100%;
     .please-wait-message {
         position: relative;
         color: #29293b;
