--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -13,7 +13,7 @@
       </div>     
     </div>    
     <div *ngIf="!loadingContent" class="stop-words-wrapper">
-      <div class="addStopWordsBlock">
+      <div class="addStopWordsBlock" *ngIf="((stopwords && stopwords.length) && !loadingContent) || createFromScratch">
         <div class="kr-sg-input-text">
             <div class="label-text">Add Stop Word</div>
             <input type="text" autocomplete="off" placeholder="Add multiple words with comma seperation" class="input-text" [(ngModel)]="newStopWord">
@@ -22,14 +22,14 @@
             <button class="kr-sg-button-primary btn_lg" (click)="addStopWord()">Save</button>
         </div>
      </div> 
-      <div class="empty-stopwords" *ngIf="!(stopwords && stopwords.length) && !loadingContent">
+      <div class="empty-stopwords" *ngIf="!(stopwords && stopwords.length) && !loadingContent && !createFromScratch">
           <div class="main_heading">Let’s start by adding stop words</div>
           <div class="desc_info">Select on how would you like to add stop words.</div>
           <div class="radio-sec">
             <div class="radio_block">            
               <div class="kr-sg-radiobutton">
-                <input id="radio-2" name="radio" class="radio-custom" type="radio" checked>
-                <label for="radio-2" class="radio-custom-label">
+                <input id="defaultStopWords" value="default" name="defaultStopWords" [(ngModel)]="stopWordsIntiType" class="radio-custom" type="radio" checked>
+                <label for="defaultStopWords" class="radio-custom-label">
                   <div class="label_heading">Default Stop Words</div>
                   <div class="lable_dec">Eg. if, me, I, can, don’t, not, won’t, should, would, isn’t, may, am, etc...</div>
                 </label>
@@ -37,15 +37,15 @@
             </div>
             <div class="radio_block">
               <div class="kr-sg-radiobutton">
-                <input id="radio-1" name="radio" class="radio-custom" type="radio">
-                <label for="radio-1" class="radio-custom-label">
+                <input id="customStopWords" value="scratch" name="customStopWords" [(ngModel)]="stopWordsIntiType" class="radio-custom" type="radio">
+                <label for="customStopWords" class="radio-custom-label">
                   <div class="label_heading">Start from Scratch</div>
                   <div class="lable_dec">Add custom stop words</div>
                 </label>
               </div> 
             </div>
           </div>
-          <button class="kr-sg-button-primary btn_lg float-right">Continue</button>
+          <button class="kr-sg-button-primary btn_lg float-right" (click)="createInit()">Continue</button>
       </div>           
       <ng-container *ngIf="(stopwords && stopwords.length) && !loadingContent">
       <div class="listingHeader">
