weights screen UI completed.

--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -103,7 +103,7 @@
       </div>
       </div>
       <div class="modal-footer" [ngClass]="{'disabled': creatingInProgress}">
-        <button [disabled]="!newApp.name"  type="button" class="btn kr-btn-primary"  data-dismiss="modal" (click)='createFindlyApp()' >{{creatingInProgress?'Createing...':'Proceed'}}</button>
+        <button [disabled]="!newApp.name"  type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='createFindlyApp()' >{{creatingInProgress?'Createing...':'Proceed'}}</button>
         <button type="button" class="btn kr-btn-cancel" data-dismiss="modal" (click)="closeCreateApp()">Close</button>
       </div>
 </kr-modal>
