--- a/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
+++ b/findly-builder/src/app/shared/kr-modal/kr-modal.component.scss
@@ -338,13 +338,13 @@
                 padding: 6px;
                 .kr-btn-primary{
                     width: 114px;
-                    background-color: #009dab;
-                    border: 1px solid #009dab;
+                    background-color:#0D6EFD;
+                    border: 1px solid #0D6EFD;
                     font-size: 14px;
                     color: #fff;
                     &:hover{
-                        background: #018490;
-                        border: 1px solid #018490;
+                        background: #0D6EFD;
+                        border: 1px solid #0D6EFD;
                     }
                     &.red{
                         background-color: $warningRed !important;
