--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -5,25 +5,35 @@
      height: calc(100vh - 62px);
      overflow: hidden;    
      background: #fff;  
-     .table-list-content{
-        .kr-sg-data-table{
-            .table-action-header{
-               justify-content: flex-start;
-               height: auto;
-               background: #F8F9FA;
-               padding: 10px 0px;
-               border-radius: 4px;
-               margin: 0;    
-               .text{
-                   margin: 0 !important;
-                   .heading{
-                       font-size: 18px;
-                       font-weight: 500;
-                   }
-               }         
-            }  
-            
-        }         
+     .header-sec-stopwords{
+        display: flex;
+        align-items: center;
+        background: #F8F9FA;
+        padding: 15px 24px 15px 45px;
+        justify-content: space-between;
+        .title{
+            font-weight: 500;
+            font-size: 18px;   
+            line-height: 22px;
+            color: #000000;         
+        }  
+        .restore_text{
+            .lable_text{
+                color: #202124;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 20px;                
+                cursor: pointer;
+                img{
+                    margin: 0 12px;
+                }
+            }
+        }    
+        .clock_img{
+            cursor: pointer;
+            margin-left: 42px;
+        } 
+        
     }
     .empty-weights{
         width: 320px;
@@ -39,7 +49,7 @@
         -webkit-box-pack: center;                       
         -ms-flex-pack: center;                       
         justify-content: center;   
-        height: calc(100vh - 290px);
+        height: calc(100vh - 222px);
         &.divBlockEmptylastChild{
             display: none;
             padding: 0;
@@ -58,22 +68,39 @@
         }
     }
     .scroll-table-allowRow{
-        height: calc(100vh - 170px);
-        padding-left: 10px;
-        .ps-content{
-            padding-top: 20px;
-        }
+        height: calc(100vh - 222px);
+        padding: 0 25px;
+        margin-top: 24px;  
         .content-body{
+            box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.05);
+            border: 0;
+            padding: 14px 0;
             .desc{
                 font-size: 12px;
                 color: #979797;
+                font-weight: 500;
                 line-height: 15px;
+                padding: 0 20px;
             }
             .name{
                 font-size: 14px;
                 color: #000000;
                 line-height: 17px;
                 font-weight: 500;
+                padding: 0 20px;
+                .pre_defined{
+                    border: 1px solid #FFAB6E;
+                    box-sizing: border-box;
+                    border-radius: 4px;
+                    padding: 2px 6px;
+                    color: #FFAB6E;
+                    text-transform: uppercase;
+                    font-weight: 500;
+                    font-size: 10px;
+                    line-height: 12px;
+                    margin-top: 8px;
+                    display: inline-block;
+                }
             }
             .sliderVal{
                 font-size: 18px;
@@ -81,32 +108,60 @@
                 font-weight: bold;
                 color: #000000;
             }
+            .sliderContainer{
+                display: flex;
+                align-items: center;
+                position: relative;
+                .range-slider{
+                    margin-right: 20px;
+                }
+                .action_links{
+                    position: absolute;
+                    right: 20px;                
+                }
+            }
             .actions-links{
                 visibility: hidden;
             }
             &:hover{
+                background: #FBFBFB;
                 .actions-links{
                     visibility: visible !important;
                 }  
             }
         } 
     }
+    .weightsFooter{
+        padding: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .add_btn_sec{
+
+        }
+        .cancel_save_sec{
+            button{
+                margin-left: 20px;
+            }
+        }
+    }
     
 }
 :host ::ng-deep .weightsSlider {
     .single-slider{
-        margin-bottom: 0px !important;
-       
-     .slider-selection{
-        background: #0D6EFD !important;
+        margin-bottom: 0px !important;  
+        width: 180px;     
+        .slider-selection{
+            background: #0D6EFD !important;
+            box-shadow: none !important;
         }
     }
     .countThreshold{
         display: none;
-       }
+    }
     .slider-track{
         height: 2px !important;
-        margin-top: -6px !important;
+        margin-top: 0px !important;
     }
     .slider-horizontal{
         width: 180px;
@@ -114,21 +169,20 @@
             background: #0D6EFD !important;
             width: 10px;
             height: 10px;
+            top: -1px;
         }  
         .slider-handle{
             background: #0D6EFD !important;
             width: 10px;
             height: 10px;
+            top: -1px;
         }
     } 
     .tooltip{
         display: none !important;
     }
 }
-::ng-deep.accor-scroll, ::ng-deep.scroll-table-allowRow{
-    .ps-content{
-        padding-top: 20px;
-    }
+::ng-deep.accor-scroll, ::ng-deep.scroll-table-allowRow{    
     .ps__thumb-y{
         width: 3px !important;
     }
@@ -136,45 +190,117 @@
         width: 3px !important;
     }
 }
-::ng-deep.addWeightModalComponent{
-    .sliderVal{
-        font-size: 18px;
-        line-height: 22px;
-        font-weight: bold;
-        color: #000000;
-        position: relative;
-        top: -3px;
-    }
-    .weightsSlider {
-        .single-slider{
-            margin-bottom: 0px !important;
-            width: 100% !important;
-         .slider-selection{
-            background: #0D6EFD !important;
+::ng-deep.addWeightModalComponent{  
+    .modal-body{
+        .mb-25{
+            margin-bottom: 25px;
+        }
+        .input-text{
+            border: 1px solid #E4E5E7;
+        }
+        .search_block{
+            padding-bottom: 27px;
+            border-bottom: 1px solid #F5F5F5;
+            &.kr-sg-input-search {
+                input{
+                    padding: 4px 25px 4px 35px !important;
+                }
+                .search-icon{
+                    position: absolute;
+                    left: 10px;
+                    top: 10px;
+                    right: auto;
+                    cursor: pointer;
+                }
+            }
+            ngb-typeahead-window{
+                box-shadow: 0px 0.6px 1.8px rgba(0, 0, 0, 0.1), 0px 3.2px 7.2px rgba(0, 0, 0, 0.13);
+                border-radius: 2px;
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                border: 0;
+                .dropdown-item{
+                    padding: 8px 10px;
+                    color: #202124;
+                    font-size: 14px;
+                    line-height: 20px;
+                    &.active{
+                        background: #E4E5E7 !important;
+                    }
+                    &:hover{
+                        background: #E4E5E7;
+                    }
+                }
             }
         }
-        .countThreshold{
-            display: none;
-           }
-        .slider-track{
-            height: 2px !important;
-            margin-top: -6px !important;
-        }
-        .slider-horizontal{
-            width: 100%;
-            .slider-tick{
-                background: #0D6EFD !important;
-                width: 10px;
-                height: 10px;
-            }  
-            .slider-handle{
-                background: #0D6EFD !important;
-                width: 10px;
-                height: 10px;
+        .kr-sg-input-text-area{
+            textarea{
+                padding: 10px;
             }
-        } 
-        .tooltip{
-            display: none !important;
         }
-    }
+        .sliderVal{
+            font-weight: bold;
+            color: #000000;
+            position: relative;
+            top: -4px;
+            font-size: 24px;
+            line-height: 29px;
+        }
+        .slider_sec{
+            .range_slider{
+                width: 100%;
+                padding-right: 30px;
+                .weightsSlider {
+                    .single-slider{
+                        margin-bottom: 0px !important;
+                        width: 100% !important;
+                        .slider-selection{
+                            background: #0D6EFD !important;
+                            box-shadow: none;
+                        }
+                    }
+                    .countThreshold{
+                        display: none;
+                    }
+                    .slider-track{
+                        box-shadow: none !important;
+                    }
+                    .slider-horizontal{
+                        width: 100%;
+                        .slider-tick{
+                            top: -9px;
+                            background: #0D6EFD !important;
+                            width: 20px;
+                            height: 20px;
+                            box-shadow: 0px 0.25px 1px rgba(7, 55, 127, 0.25), 0px 0.85px 3px rgba(0, 0, 0, 0.19);
+                            border: 0;
+                        }  
+                        .slider-handle{
+                            top: -9px;
+                            background: #0D6EFD !important;
+                            width: 20px;
+                            height: 20px;
+                            box-shadow: 0px 0.25px 1px rgba(7, 55, 127, 0.25), 0px 0.85px 3px rgba(0, 0, 0, 0.19);
+                            border: 0;
+                        }
+                    } 
+                    .tooltip{
+                        display: none !important;
+                    }
+                }
+            }
+        }          
+    }  
+    .modal-footer{  
+        .kr-sg-button-danger{
+            background: #DD3646;
+        }     
+        button{
+            margin-right: 10px !important;
+        }
+        .mr-0{
+            margin-right: 0 !important;
+        }
+    }   
 }
