--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -1586,6 +1586,7 @@ and open the template in the editor.
         width: 100%;
         line-height: normal;
         margin: 0 !important;
+        outline: 0 !important;
         &::placeholder{
             color: $secondaryColor;         
         }
@@ -2005,6 +2006,7 @@ and open the template in the editor.
         height: 34px;
         line-height: 34px;
         width: 100%;
+        outline: 0 !important;
         &::placeholder{
             color: $secondaryColor;
             opacity: 0.5;
@@ -2043,6 +2045,7 @@ and open the template in the editor.
         padding: 4px 30px;
         height: 30px;
         line-height: 30px;
+        outline: 0 !important;
         width: 100%;
         &::placeholder{
             color: $secondaryColor;
