--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -1,3 +1,109 @@
-<div>
-    Workbench component working
+<div class="contentContainer">
+    <div class="mainLoadingSpinner" *ngIf="loadingContent" >
+        <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
+        <span class="please-wait-message">Please Wait!</span>
+    </div>
+    <ng-container *ngIf="!loadingContent">
+    <div class="header-sec-stopwords">
+        <div class="title">Index Configurations</div>
+        <div class="restore_text">
+            <button type="button" class="kr-sg-button-secondary btn_lg mr-2">Save Configuration</button>
+            <button type="button" class="kr-sg-button-primary btn_lg mr-2">Re-Index</button>
+        </div>                   
+    </div> 
+    <div class="indexmain-container">
+        <div class="indexsListContainer">
+            <div class="index-content-boxes">
+                <div class="content left-content">
+                    <div class="content-boxes index_tasks_list">
+                        <div class="stagsHeader p-2">
+                            <span>Stages <img src="assets/icons/editor/plus-add.svg" class="ml-4" (click)="createNewMap()"></span>
+                        </div>
+                        <perfect-scrollbar class="">
+                        <ng-container *ngIf="newStageObj.addNew">
+                            <span>
+                                {{newStage.name}}
+                                <img src="assets/images/closeCross.svg" class="ml-4">
+                            </span>
+                        </ng-container>
+                        <ng-container *ngIf="indexMappings && indexMappings.length">
+                            <div *ngFor="let mapping of indexMappings" class="p-2" (click)="selectmapping(mapping.stage)">
+                               <span>{{mapping.stage}}</span>
+                            </div>
+                        </ng-container>
+
+                        <div class="fields p-5" (click)="selectmapping('field_mapping')">
+                           <span>Fields</span>
+                        </div>
+                        </perfect-scrollbar>
+                    </div>
+                </div>            
+                <div class="content right-content">
+                    <div class="content-boxes train_your_questions">
+                        <div class="table-list-content">
+                            <div *ngIf="newStageObj.addNew">
+                              <div class="p-2">
+                                <div class="kr-sg-dropdowns w-100">
+                                    <div class="label-text">Stage Type</div>
+                                    <div class="dropdown dropdown-open">
+                                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{newStageObj.type?defaultStageTypesObj[newStageObj.type].name:'Choose an option'}}</button>                                            
+                                        <ul class="dropdown-menu content-menu">
+                                          <li *ngFor="let item of defaultStageTypes" (click)="selectNewItem(item)">{{item.name}}</li>
+                                        </ul>
+                                      </div>
+                                </div>
+                                <div class="kr-sg-input-text pt-2">
+                                    <div class="label-text">Stage Name</div>
+                                    <input type="text" placeholder="Placeholder text" class="input-text" [(ngModel)]="newStage.name">
+                                </div>
+                                <div class="kr-sg-input-text pt-2">
+                                    <div class="label-text">Condition</div>
+                                    <input type="text" placeholder="Placeholder text" class="input-text" [(ngModel)]="newStage.condition">
+                                </div>
+                              </div>
+                            </div>
+                            <div class="kr-sg-data-table" *ngIf="!newStageObj.addNew">
+                              <div class="table-action-header">
+                                <div>
+                                  <div class="kr-sg-dropdowns">
+                                    <div class="dropdown dropdown-open">
+                                      <button class="dropdown-toggle dropdown-input"><img src="assets/icons/sidemenu/plus-table.svg">Add Field</button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="fieldContnet">
+                            <!-- DATA TABLE START HERE -->
+                            <div class="kr-sg-data-table">
+                                <section class="table-content">
+                                    <header class="table-header">
+                                        <div class="col_ col-2">Field Name</div>
+                                        <div class="col_ col-2">Type</div>
+                                        <div class="col_ col-2">Multi-Value</div>
+                                        <div class="col_ col-2">Required</div>
+                                        <div class="col_ col-2">Stored</div>
+                                        <div class="col_ col-2">Indexed</div>
+                                    </header>
+                                    <div class="content-body" *ngFor="let item of selectedMapping">
+                                        <div class="col_ col-2">{{item.name}}</div>
+                                        <div class="col_ col-2">{{item.type}}</div>
+                                        <div class="col_ col-2">{{item.multiValue}}</div>
+                                        <div class="col_ col-2">{{item.required}}</div>
+                                        <div class="col_ col-2">{{item.stored}}</div>
+                                        <div class="col_ col-2 pr-0">
+                                            <span>{{item.index?'Yes':'No'}} <span class="actions-links"><img class="action_icon arrow-icon" src="assets/icons/trashIcon.svg"></span></span>
+                                        </div>
+                                    </div>
+                                </section>                               
+                            </div>   
+                           
+                            </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>        
+        </div>
+    </div>
+    </ng-container>
 </div>
