--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -117,7 +117,7 @@
                                         <button class="btn-rem">Remove</button>
                                         <div class="action-on-this" (click)="toggleAction(icontoggle, i,actLog.drop)">
                                            <span class="arrow" [ngClass] = " actLog.drop ?  'up' : 'down'"></span>
-                                           <span class="arr-txt">PAST ACTION ON THIS ITEMS</span>
+                                           <span class="arr-txt">PAST ACTION ON THIS ITEM</span>
                                         </div>
                                         <div class="drop-list" *ngIf="actLog.drop">
                                             <ul class="list-p">
